# spaceship-titanic

./: README.md  pyproject.toml  spaceship-titanic-eda.ipynb  spaceship-titanic-exploration.ipynb  spaceship-titanic-exploration.py  spaceship-titanic-final-model.ipynb  spaceship-titanic.ipynb  spaceship-titanic.py
data/: best_params.txt  best_params_train.json  elapsed_time.txt  predictions.csv
scripts/: to_script.sh
