[tool.poetry]
name = "spaceship-titanic"
version = "0.1.0"
description = "Solving the Spaceship Titanic Kaggle Competition"
authors = ["Javier Vela <javier.vela00@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.0"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.0"
xgboost = "^2.1.3"
lightgbm = "^4.5.0"
featuretools = "^1.31.0"
setuptools = "^75.6.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter-core = "^5.7.2"
nbconvert = "^7.16.4"

